Revision history for Pod-PseudoPod-LaTeX

{{$NEXT}}
    - added support for custom environments
    - improved screen handling (Dean Serenevy, Moritz Lenz)

1.101600  Wed Jun 9 13:48:24 2010
    - made bin/ppod2latex installable (Jerome Quelin, RT #58269)
    - used Git plugins for dzil

1.101530  Wed Jun 2 11:39:29 2010
    - pulled screen section changes from Moritz Lenz

1.101060  Fri Apr 16 08:46:25 2010
    - added repository information to distribution, no functional changes

1.101050  Thu Apr 15 20:49:53 2010
    - migrated build system to Dist::Zilla
    - corrected escaping of the caret (^) character; closes [CPAN #50794]
    - implemented markup in verbatim environments

1.000  Fri Aug 14 02:07:38 UTC 2009
    - added modifications from the Parrot PIR book
    - removed unnecessary developer tests and Makefile.PL from tarball
    - improved dependencies

0.10   Thu Jun  1 00:02:17 UTC 2006
        First version, released on an unsuspecting world.