@@ -3,7 +3,7 @@ author  = chromatic <chromatic@cpan.org>
 license = Perl_5
 copyright_holder = chromatic
 
-[AutoPrereq]
+[AutoPrereqs]
 [AutoVersion]
 [ConfirmRelease]
 [ExecDir]
