@@ -61,6 +61,12 @@ Index entries are more fun, as more special characters must be escaped, with
 a quote sign. E.g. X<negation ! operator>, X<array @ sigil>, X<the pipe |>
 and X<strange quote a"a>.
 
+=for latex
+
+Sometimes it would be good to send direct commands to \LaTeX
+
+=end
+
 Hierarchical terms are also possible, separating single terms with a comma.
 Spaces around comma (e.g. in X< hierarchical terms , omiting trailing spaces>)
 should be ignored, as they influence sorting order.
